# TRIDENT

./: LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
cpp/: CMakeLists.txt  trident.cpp
trident_add-on/: __init__.py  data_loader.py  geometry_nodes.py  legend_setup.py  operators.py  panel.py  properties.py  scene_environment.py
trident_extension/: __init__.py  blender_manifest.toml  color_palette.json  data_loader.py  geometry_nodes.py  legend_setup.py  operators.py  panel.py  properties.py  scene_environment.py
